# bb-remote-execution

./: MODULE.bazel
.github/workflows/: main.yaml
cmd/bb_noop_worker/: BUILD.bazel  main.go
cmd/bb_runner/: BUILD.bazel  main.go
cmd/bb_runner_installer/: BUILD.bazel
cmd/bb_scheduler/: BUILD.bazel  main.go
cmd/bb_virtual_tmp/: main.go
cmd/bb_worker/: BUILD.bazel  main.go
pkg/blobstore/: batched_store_blob_access_test.go
pkg/builder/: BUILD.bazel  egress_auth_internal_test.go  local_build_executor.go  local_build_executor_test.go
pkg/builder/egressauth/: BUILD.bazel  egress_auth.go  egress_auth_test.go  grant.go  grant_test.go  socket_relay.go
pkg/filesystem/virtual/: cas_initial_contents_fetcher_test.go
pkg/filesystem/virtual/configuration/: fuse_mount_enabled.go
pkg/proto/configuration/bb_runner/: bb_runner.pb.go  bb_runner.proto
pkg/proto/configuration/bb_scheduler/: bb_scheduler.pb.go  bb_scheduler.proto
pkg/proto/configuration/bb_worker/: bb_worker.pb.go  bb_worker.proto
pkg/proto/configuration/filesystem/virtual/: virtual.pb.go  virtual.proto
pkg/proto/remoteworker/: BUILD.bazel  forwarded_request_header.pb.go  forwarded_request_header.proto
pkg/runner/: BUILD.bazel  broker_client.go  credentialed_runner.go
pkg/scheduler/: in_memory_build_queue.go
tools/: workspace-status.sh
