load("@com_github_buildbarn_bb_storage//tools:container.bzl", "multiarch_go_image")
load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_img//img:push.bzl", "image_push")

go_library(
    name = "bb_noop_worker_lib",
    srcs = ["main.go"],
    importpath = "github.com/buildbarn/bb-remote-execution/cmd/bb_noop_worker",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/blobstore",
        "//pkg/builder",
        "//pkg/filesystem/pool",
        "//pkg/proto/configuration/bb_noop_worker",
        "//pkg/proto/remoteworker",
        "@com_github_buildbarn_bb_storage//pkg/blobstore/configuration",
        "@com_github_buildbarn_bb_storage//pkg/clock",
        "@com_github_buildbarn_bb_storage//pkg/digest",
        "@com_github_buildbarn_bb_storage//pkg/global",
        "@com_github_buildbarn_bb_storage//pkg/program",
        "@com_github_buildbarn_bb_storage//pkg/util",
        "@com_github_buildbarn_bb_storage//pkg/zstd",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)

go_binary(
    name = "bb_noop_worker",
    embed = [":bb_noop_worker_lib"],
    visibility = ["//visibility:public"],
)

multiarch_go_image(
    name = "bb_noop_worker_container",
    binary = ":bb_noop_worker",
)

# Push directly to ghcr.io/aron-muon/bb-noop-worker. Bypasses upstream's
# container_push_official macro (which pushes to ghcr.io/buildbarn/) so we
# can publish forked images. See cmd/bb_worker/BUILD.bazel for the
# rationale behind stamp = "enabled".
image_push(
    name = "bb_noop_worker_container_push",
    image = ":bb_noop_worker_container",
    registry = "ghcr.io",
    repository = "aron-muon/bb-noop-worker",
    stamp = "enabled",
    tag_file = "@com_github_buildbarn_bb_storage//tools:stamped_tags",
    tags = ["manual"],
)
