load("@com_github_buildbarn_bb_storage//tools:container.bzl", "multiarch_go_image")
load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_img//img:push.bzl", "image_push")

go_library(
    name = "bb_runner_lib",
    srcs = ["main.go"],
    importpath = "github.com/buildbarn/bb-remote-execution/cmd/bb_runner",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/cleaner",
        "//pkg/credentials",
        "//pkg/filesystem",
        "//pkg/proto/configuration/bb_runner",
        "//pkg/proto/runner",
        "//pkg/proto/tmp_installer",
        "//pkg/runner",
        "@com_github_buildbarn_bb_storage//pkg/filesystem",
        "@com_github_buildbarn_bb_storage//pkg/filesystem/path",
        "@com_github_buildbarn_bb_storage//pkg/global",
        "@com_github_buildbarn_bb_storage//pkg/grpc",
        "@com_github_buildbarn_bb_storage//pkg/program",
        "@com_github_buildbarn_bb_storage//pkg/util",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)

go_binary(
    name = "bb_runner",
    embed = [":bb_runner_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)

multiarch_go_image(
    name = "bb_runner_bare_container",
    binary = ":bb_runner",
)

# Push directly to ghcr.io/aron-muon/bb-runner-bare. Bypasses upstream's
# container_push_official macro (which pushes to ghcr.io/buildbarn/) so we
# can publish forked images. See cmd/bb_worker/BUILD.bazel for the
# rationale behind stamp = "enabled".
image_push(
    name = "bb_runner_bare_container_push",
    image = ":bb_runner_bare_container",
    registry = "ghcr.io",
    repository = "aron-muon/bb-runner-bare",
    stamp = "enabled",
    tag_file = "@com_github_buildbarn_bb_storage//tools:stamped_tags",
    tags = ["manual"],
)
