load("@bazel_skylib//rules:copy_file.bzl", "copy_file")
load("@com_github_buildbarn_bb_storage//tools:container.bzl", "multiarch_go_image")
load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_img//img:push.bzl", "image_push")

go_library(
    name = "bb_runner_installer_lib",
    srcs = ["main.go"],
    embedsrcs = ["bb_runner"],
    importpath = "github.com/buildbarn/bb-remote-execution/cmd/bb_runner_installer",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "bb_runner_installer",
    embed = [":bb_runner_installer_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)

multiarch_go_image(
    name = "bb_runner_installer_container",
    binary = ":bb_runner_installer",
)

# Push directly to ghcr.io/aron-muon/bb-runner-installer. Bypasses upstream's
# container_push_official macro (which pushes to ghcr.io/buildbarn/) so we
# can publish forked images. See cmd/bb_worker/BUILD.bazel for the
# rationale behind stamp = "enabled".
image_push(
    name = "bb_runner_installer_container_push",
    image = ":bb_runner_installer_container",
    registry = "ghcr.io",
    repository = "aron-muon/bb-runner-installer",
    stamp = "enabled",
    tag_file = "@com_github_buildbarn_bb_storage//tools:stamped_tags",
    tags = ["manual"],
)

copy_file(
    name = "bb_runner_copy",
    src = "//cmd/bb_runner",
    out = "bb_runner",
)
